modal window fix - add scroll on small screen

--- a/components/ModalSendForm/ModalSendForm.module.css
+++ b/components/ModalSendForm/ModalSendForm.module.css
@@ -1,24 +1,10 @@
 .background {
-  background-image: url('/images/hallfame/bghallfame.webp');
+  background-image: image-set(
+    url(/images/common/bg-modal.webp) 1x,
+    url(/images/common/bg-modal@x2.webp) 2x
+  );
 
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-}
-
-@media (min-width: 768px) {
-  .hallFameListContainer {
-    background-image: url('/images/hallfame/bghallfametabl.webp');
-  }
-  @media (min-resolution: 192dpi), (min-width: 2dppx) {
-    .hallFameListContainer {
-      background-image: url('/images/hallfame/bghallfametabl@2x.webp');
-    }
-  }
-}
-
-@media (min-resolution: 192dpi), (min-width: 2dppx) {
-  .hallFameListContainer {
-    background-image: url('/images/hallfame/bghallfame@2x.webp');
-  }
 }
